# tam

./: README.md
ext/unqlite/: CMakeLists.txt
src/: CMakeLists.txt  resource.qrc
src/app/: main.cpp
src/cmake/: FindBoost.cmake  FindQt.cmake  SoDA.cmake  unqlite.cmake
src/gui/: CClusterEditorAddDialog.cpp  CClusterEditorAddDialog.h  CClusterEditorAddDialog.ui  CClusterEditorDialog.cpp  CClusterEditorDialog.h  CClusterEditorDialog.ui  CClusterPluginParameterTableModel.cpp  CClusterPluginParameterTableModel.h  CCoveredListDialog.cpp  CCoveredListDialog.h  CIDManagerTableModel.cpp  CIDManagerTableModel.h  CLoadTestSuiteDialog.cpp  CLoadTestSuiteDialog.h  CLoadTestSuiteDialog.ui  CMainWindow.cpp  CMainWindow.h  CMainWindow.ui  CNewWorkspaceDialog.cpp  CNewWorkspaceDialog.h  CNewWorkspaceDialog.ui  CResultsExportDialog.cpp  CResultsExportDialog.h  CShowClusters.cpp  CShowClusters.h  CShowClustersDialog.cpp  CShowClustersDialog.h  CShowMetrics.cpp  CShowMetrics.h  CShowScores.cpp  CShowScores.h  CShowStatistics.cpp  CShowStatistics.h  CShowStatisticsDialog.cpp  CShowStatisticsDialog.h  CShowStatisticsDialog.ui  CTableViewButtonDelegate.cpp  CTableViewButtonDelegate.h  main.cpp
src/gui/inc/helper/: CClusterPluginParameterTableModel.h  CIDManagerTableModel.h  CShowClusters.h  CShowMetrics.h  CShowScores.h  CShowStatistics.h  CTableViewButtonDelegate.h
src/gui/inc/ui/: CClusterEditorAddDialog.h  CClusterEditorDialog.h  CCoveredListDialog.h  CMainWindow.h  CResultsExportDialog.h
src/gui/src/helper/: CClusterPluginParameterTableModel.cpp  CIDManagerTableModel.cpp  CShowClusters.cpp  CShowMetrics.cpp  CShowScores.cpp  CShowStatistics.cpp  CTableViewButtonDelegate.cpp
src/gui/src/ui/: CClusterEditorAddDialog.cpp  CClusterEditorDialog.cpp  CCoveredListDialog.cpp  CMainWindow.cpp  CResultsExportDialog.cpp
src/gui/ui/: CClusterEditorDialog.ui  CCoveredListDialog.ui  CResultsExportDialog.ui
src/lib/: CClusterList.cpp  CClusterList.h  CFLScore.cpp  CFLScore.h  CStatisticsThread.cpp  CStatisticsThread.h  CTestSuiteCluster.cpp  CTestSuiteCluster.h  CTestSuiteLoader.cpp  CTestSuiteLoader.h  CTestSuiteMetrics.cpp  CTestSuiteMetrics.h  CUnqliteWrapper.cpp  CUnqliteWrapper.h  CWorkspace.cpp  CWorkspace.h
src/lib/inc/runnable/: CFLScore.h  CStatisticsThread.h  CTestSuiteCluster.h  CTestSuiteLoader.h  CTestSuiteMetrics.h
src/lib/inc/wrapper/: CClusterList.h  CUnqliteWrapper.h  CWorkspace.h
src/lib/src/runnable/: CFLScore.cpp  CStatisticsThread.cpp  CTestSuiteCluster.cpp  CTestSuiteLoader.cpp  CTestSuiteMetrics.cpp
src/lib/src/wrapper/: CClusterList.cpp  CUnqliteWrapper.cpp  CWorkspace.cpp
